# page-analyzer

./: .env.sample  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: my-check.yml
page_analyzer/: __init__.py  app.py  application.py  db_manager.py  db_queries.py  url_checker.py  url_utils.py  utils.py
page_analyzer/templates/: index.html  layout.html  show.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/includes/: footer.html  messages.html  nav.html
page_analyzer/templates/urls/: detail.html  list.html
