[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer – is a website that analyzes pages for SEO suitability, similar to PageSpeed Insights"
authors = ["alex-j-fox <alex-j-fox@yandex.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]
repository = "https://github.com/alex-j-fox/python-project-83"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: Freeware",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Site Management"
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
validators = "^0.28.3"
bs4 = "^0.0.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
